All reviewers comments
git-svn-id: svn+ssh://svn.cern.ch/reps/LHCDMF/trunk@394 4525493e-7705-40b1-a816-d608a930855b

--- a/doc/tex/EFTValidity.tex
+++ b/doc/tex/EFTValidity.tex
@@ -132,8 +132,11 @@ Defining $\sigma_{\rm EFT}^{\rm cut}$ as the cross section truncated such that a
 %
 which can be solved for $\Mstar^{\rm rescaled}$ via either iteration or a scan.
 %(note that $\Mstar^{\rm rescaled}$ appears on both the LHS and RHS of the equation).
-Similar relations exist for a given UV completion of each operator. The details and application of this procedure to 
-ATLAS results can be found in Ref.~\cite{Aad:2015zva} for a range of operators.
+Similar relations exist for a given UV completion of each operator. 
+
+This procedure has been proposed in Ref.~\cite{Busoni:2014sya} 
+and its application to ATLAS results can
+be found in Ref.~\cite{Aad:2015zva} for a range of operators.
 We reiterate: knowledge of the UV completion for a given
 EFT operator was necessary for this procedure;
 this introduces a model-dependence that was not present
@@ -203,10 +206,13 @@ The resulting plots are shown in \cite{Racco:2015dxa} for a particular effective
 
 The advantage of this procedure is that the obtained bounds can be directly and easily recast in any  completion of the EFT, by computing the parameters \Mstar, \Mcut in the full model as functions of the parameters of the complete theory. On the other hand, the resulting limits will be weaker than those obtained using \Qtr and a specific UV completion.
 
-\subsection{Consideration for shape analyses}
+\subsection{Truncation at the generator level}
 
-If a search is not simply a counting experiment and exploits the shapes of kinematic distributions, any of the two conditions on the momentum transfer should be applied on the benchmarks using generator level information, by discarding events that are invalid, and the limit derived from
-the truncated shape must be recalculated. This provides the necessary rescaling of the cross section while keeping the information on the change in the kinematic distributions due to the removal of the invalid events. 
+The conditions on the momentum transfer can also be applied directly at the generator level, by discarding 
+events that are invalid and calculating the limits from this truncated shape. 
+This provides the necessary rescaling of the cross section while keeping the information on the change in the kinematic distributions due to the removal of the invalid events. This procedure is more general with 
+respect to rescaling the limit in the two sections above, and it should be followed if
+a search is not simply a counting experiment and exploits the shapes of kinematic distributions.
 
 \subsection{Sample results of EFT truncation procedures}
 
@@ -223,7 +229,6 @@ An example of the application of the two procedures to the limit on $M_*$ from R
 \Todo{This plot needs to be clarified further: what is the statistics for the truncation with sHat, and does this cause the sudden drop at $\sqrt{g}$=2?}
 
 \subsection{Comments on unitarity considerations}
-\Todo{Waiting for input from J. Alcaraz}
 
 A further consideration applicable to EFT operators at hadron colliders
 is the potential violation of unitarity.  An analysis of the operator
@@ -255,7 +260,7 @@ and the Direct and Indirect Detection communities are to be involved.
 We divide the EFT operators in two categories: 
 those that can be mapped to one or more UV-complete simplified models, such as those
 commonly used in LHC searches so far and detailed in~\cite{Goodman:2010ku}, and those
-for which no UV completion is available, such as those outlined in Section~\ref{sec:EFT_models_with_direct_DM_boson_couplings}.
+for which no UV completion is available to LHC experiments, such as those outlined in Section~\ref{sec:EFT_models_with_direct_DM_boson_couplings}.
 %% The For the first case, the EFT is supposed to cover the cases where the mediating particles are heavy,
 %% thus overlapping with the simplified models outlined in this report.
 %% Results for this first class of operators can be recast starting from simplified models with high mediator masses, 
