--- a/doc/tex/TTBar.tex
+++ b/doc/tex/TTBar.tex
@@ -61,7 +61,8 @@ experimentally visible $b$ quark, leading to a mono-$b$ signature in a model tha
 Dedicated implementations of these models for the work of this Forum are available at LO+PS accuracy,
 even though the state of the art is set to improve on a timescale beyond that for early Run-2 DM searches
 as detailed in Section~\ref{sec:TTBar_implementation}.
-The studies in this Section have been produced using a leading order model within \madgraph 2.2.2, 
+The studies in this Section have been produced using a leading order UFO model within \madgraph 2.2.2
+~\cite{Alwall:2014hca,Alloul:2013bka,Degrande:2011ua} 
 using \pythiaEight for the parton shower. 
 
 \subsubsection{Parameter scan}
@@ -101,8 +102,7 @@ transition region between on-shell and off-shell mediators. %, as inFig.~\ref{fi
 \begin{figure}[!ht]
   \begin{center}
     \includegraphics[width=0.95\textwidth]{figures/ttbar/MEt_chi1_pseudo.pdf}
-    \caption{\label{fig:scanPhiPseudo} Example of the dependence of the kinematics on the pseudoscalar mediator mass. The Dark Matter mass is fixed to be \mdm=$1 {\rm GeV}$.
-    }
+    \caption{\label{fig:scanPhiPseudo} Example of the dependence of the kinematics on the pseudoscalar mediator mass. The Dark Matter mass is fixed to be \mdm=$1 {\rm GeV}$. All figures concerning the $t\bar{t}$+\MET{}  signature have been produced using a leading order model within \madgraph 2.2.2, using \pythiaEight for the parton shower.}
 \end{center}
 \end{figure}
 
