--- a/doc/tex/TheoryUncertainties.tex
+++ b/doc/tex/TheoryUncertainties.tex
@@ -101,7 +101,8 @@ useful keywords to group together different weights are
 More detailed information can be obtained by inspecting the document in 
 \texttt{/Docs/V2-paper.pdf} under the common \namecaps{POWHEG-BOX-V2} directory. 
 
-\section{The SysCalc package}
+\section{The SysCalc package in \madgraph}
+
 
 \syscalc is a post-processing package for parton-level events as obtained from leading-order calculations in \madgraph.  It can associate to each event a series of weights corresponding to the evaluation of a certain class of theoretical uncertainties. The event files in input and output are compliant with  the Les Houches v3 format.
 For NLO calculations, PDF and scale uncertainties are instead evaluated automatically by setting corresponding instructions in the \texttt{run\_card.dat} and no post-processing is needed (or possible).
