--- a/doc/doc.bib
+++ b/doc/doc.bib
@@ -1913,6 +1913,7 @@
 		archivePrefix  = "arXiv",
 		primaryClass   = "hep-ph",
 		SLACcitation   = "%%CITATION = ARXIV:1506.03116;%%",
+		note           = "Submitted for publication to Physics of the Dark Universe"
 	}
 	
 %%% All references for experimental searches
@@ -1937,13 +1938,17 @@
 
 
 @article{Khachatryan:2014rra,
-        author         = "{CMS Collaboration}",
+	author         = "Khachatryan, Vardan and others",
 	title          = "{Search for dark matter, extra dimensions, and
-	unparticles in monojet events in proton-proton collisions
-	at $\sqrt{s}$ = 8 TeV}",
+	unparticles in monojet events in proton–proton
+	collisions at $\sqrt{s} = 8$ TeV}",
 	collaboration  = "CMS",
-	journal        = "arXiv:1408.3583 [hep-ex], Submitted to Eur.Phys.J. C",
-	year           = "2014",
+	journal        = "Eur.Phys.J.",
+	number         = "5",
+	volume         = "C75",
+	pages          = "235",
+	doi            = "10.1140/epjc/s10052-015-3451-4",
+	year           = "2015",
 	eprint         = "1408.3583",
 	archivePrefix  = "arXiv",
 	primaryClass   = "hep-ex",
@@ -2606,3 +2611,83 @@ SLACcitation   = "%%CITATION = ARXIV:0906.2474;%%",
 	note = "[Online; accessed 13-June-2015]"
 }
 
+@article{Sjostrand:2007gs,
+	author         = "Sjostrand, Torbjorn and Mrenna, Stephen and Skands, Peter
+	Z.",
+	title          = "{A Brief Introduction to PYTHIA 8.1}",
+	journal        = "Comput.Phys.Commun.",
+	volume         = "178",
+	pages          = "852-867",
+	doi            = "10.1016/j.cpc.2008.01.036",
+	year           = "2008",
+	eprint         = "0710.3820",
+	archivePrefix  = "arXiv",
+	primaryClass   = "hep-ph",
+	reportNumber   = "CERN-LCGAPP-2007-04, LU-TP-07-28,
+	FERMILAB-PUB-07-512-CD-T",
+	SLACcitation   = "%%CITATION = ARXIV:0710.3820;%%",
+}
+
+@article{Maltoni:2015twa,
+	author         = "Maltoni, Fabio and Martini, Antony and Mawatari, Kentarou
+	and Oexl, Bettina",
+	title          = "{Signals of a superlight gravitino at the LHC}",
+	journal        = "JHEP",
+	volume         = "1504",
+	pages          = "021",
+	doi            = "10.1007/JHEP04(2015)021",
+	year           = "2015",
+	eprint         = "1502.01637",
+	archivePrefix  = "arXiv",
+	primaryClass   = "hep-ph",
+	reportNumber   = "CP3-15-03, MCNET-15-01",
+	SLACcitation   = "%%CITATION = ARXIV:1502.01637;%%",
+}
+
+@article{deAquino:2012ru,
+	author         = "de Aquino, P. and Maltoni, F. and Mawatari, K. and Oexl,
+	B.",
+	title          = "{Light Gravitino Production in Association with Gluinos
+	at the LHC}",
+	journal        = "JHEP",
+	volume         = "1210",
+	pages          = "008",
+	doi            = "10.1007/JHEP10(2012)008",
+	year           = "2012",
+	eprint         = "1206.7098",
+	archivePrefix  = "arXiv",
+	primaryClass   = "hep-ph",
+	SLACcitation   = "%%CITATION = ARXIV:1206.7098;%%",
+}
+
+@article{Alwall:2008qv,
+	author         = "Alwall, Johan and de Visscher, Simon and Maltoni, Fabio",
+	title          = "{QCD radiation in the production of heavy colored
+	particles at the LHC}",
+	journal        = "JHEP",
+	volume         = "0902",
+	pages          = "017",
+	doi            = "10.1088/1126-6708/2009/02/017",
+	year           = "2009",
+	eprint         = "0810.5350",
+	archivePrefix  = "arXiv",
+	primaryClass   = "hep-ph",
+	SLACcitation   = "%%CITATION = ARXIV:0810.5350;%%",
+}
+
+@article{Corcella:2000bw,
+	author         = "Corcella, G. and others",
+	title          = "{HERWIG 6: An Event generator for hadron emission
+	reactions with interfering gluons (including
+	supersymmetric processes)}",
+	journal        = "JHEP",
+	volume         = "0101",
+	pages          = "010",
+	doi            = "10.1088/1126-6708/2001/01/010",
+	year           = "2001",
+	eprint         = "hep-ph/0011363",
+	archivePrefix  = "arXiv",
+	primaryClass   = "hep-ph",
+	reportNumber   = "CAVENDISH-HEP-99-03, CERN-TH-2000-284, RAL-TR-2000-048",
+	SLACcitation   = "%%CITATION = HEP-PH/0011363;%%",
+}
