--- a/doc/tex/SingleB.tex
+++ b/doc/tex/SingleB.tex
@@ -6,14 +6,15 @@ gamma-ray excess observed in data collected by the Fermi-LAT collaboration~\cite
 This model favors couplings to third-generation quarks via Yukawa couplings, 
 therefore respecting the MFV assumption. 
 
-This model produces an annihilation cross section consistent with the gamma-ray excess
-which can be achieved for perturbative
-values of the couplings, while being consistent with LHC constraints on the
-colored mediator
-For parameters capable of explaining the anomalous gamma-ray signal in terms of Dark Matter 
-coupling preferentially to $b$-quarks, the model predicts a direct detection cross section that is consistent 
-with current constraints, but within the near future reach of Direct Detection experiments and of the
-upcoming LHC run. 
+%CD Removed after B. Zaldivar's comments
+%This model produces an annihilation cross section consistent with the gamma-ray excess
+%which can be achieved for perturbative
+%values of the couplings, while being consistent with LHC constraints on the
+%colored mediator
+%For parameters capable of explaining the anomalous gamma-ray signal in terms of Dark Matter 
+%coupling preferentially to $b$-quarks, the model predicts a direct detection cross section that is consistent 
+%with current constraints, but within the near future reach of Direct Detection experiments and of the
+%upcoming LHC run. 
 %The model will be decisively tested with data from the upcoming high-energy run at the LHC. 
 
 The model contains a Dirac fermion transforming as a flavor triplet, exclusively coupling
@@ -32,7 +33,7 @@ but such models will have to be investigate on a longer timescale with respect t
 
 The Lagrangian considered is given by
 \begin{equation}
-  -{\cal L} \supset g \Phi^* \bar\chi_b b_R  + {\rm h.c.}
+  {\cal L} \supset g \Phi^* \bar\chi_b b_R  + {\rm h.c.}
 \end{equation}
 
 %The QCD production of the colored mediator introduces a tree-level $b$+MET diagram with a $g_s*g$ dependence, which could be scaled. 
@@ -40,12 +41,13 @@ The Lagrangian considered is given by
 %($g_s^2$) and also possibly diagrams that scale as $g_s^2*g$.
 
 This model is known at LO+PS accuracy, and the studies in this Section use a LO model implementation within \madgraph v2.2.3
-interfaced to \pythia 8. Further implementation details can be found in Section~\label{sec:TTBar_implementation}.
+interfaced to \pythiaEight for the parton shower. Further implementation details can be found in Section~\label{sec:TTBar_implementation}.
  
 
 \subsubsection{Parameter scan}
 
-The nature of the model is not conducive to a simple scaling behavior that would allow us to reduce the number of points to be simulated. This is because of the interference of diagrams with QCD production of the mediator (which scale as $g^2_s$) with diagrams that are proportional to the coupling $g$ in the $b+$\MET{} and $b\bar{b}$+\MET{} final states. Fixing the couplings also fixes the mediator width, when adopting the minimal width assumption. 
+In this model, the interference of diagrams with QCD production of the mediator (which scale as $g^2_s$) with diagrams that are proportional to the coupling $g$ in the $b+$\MET{} and $b\bar{b}$+\MET{} final states. In the case of large couplings, this is not conducive to a simple scaling behavior that would allow us to reduce the number of points to be simulated. 
+%Fixing the couplings also fixes the mediator width, when adopting the minimal width assumption. 
 
 A full study of the parameter scan for this model was not available for this report; thus for early Run-2 searches we recommend scanning a range of possible widths as discussed in a more limited way than for the \tchannel mono-jet, spanning from the minimal width to a value approaching the particle limit, e.g. $g=0.5,1,2,3$. A coupling benchmark such as $g=1$ should be considered for each mass point since this would be a distinctive feature of this benchmark from SUSY models with sbottom squarks (see Section~\ref{sec:monojet_t_channel} for further discussion).
 %: Cross-sections for unit couplings can be found in Appendix~\ref{app:xsecs_bFDM}. 
@@ -68,7 +70,7 @@ A scan of Dark Matter and mediator masses should be done in the on-shell region 
 \begin{figure*}[h!]
   \includegraphics[width=0.49\textwidth]{figures/bFDM/bfdm_35_500/missing_et.eps}\quad
   \includegraphics[width=0.49\textwidth]{figures/bFDM/bfdm_35_500/Njets.eps}
-  \caption{\MET (left) and jet multiplicity (right) for $\mDM=35$~GeV and $\MPhi=500$~GeV for couplings corresponding to relic density weights, with varying $g=1,2$} \label{fig:g_comp}
+  \caption{\MET (left) and jet multiplicity (right) for $\mDM=35$~GeV and $\MPhi=500$~GeV for varying couplings of $g=1,2$} \label{fig:g_comp}
 \end{figure*}
 
 %The following benchmark points could be produced as a starting point for the parameter space for this model:
